--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,5 +13,30 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="@string/TxPAHeading"
+        android:id="@+id/tvPHeading"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvPRESHeading"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/tvPHeading"
+        android:text="@string/TxPAReadExternalStorage"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvPRESDescription"
+        android:layout_below="@id/tvPRESHeading"
+        android:layout_marginLeft="20dp"
+        android:text="@string/TxPARESDescription"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="@string/TxGrant"
+        android:id="@+id/btnRequest" />
 </RelativeLayout>
