--- a/app/src/main/res/layout/integer_compound.xml
+++ b/app/src/main/res/layout/integer_compound.xml
@@ -3,29 +3,38 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
+    <TextView
+        android:id="@+id/tvName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:text="ERROR"
+        android:textSize="24sp" />
+
     <Button
+        android:id="@+id/btnDecrement"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        android:layout_below="@id/tvName"
         android:text="-"
-        android:textSize="24sp"
-        android:id="@+id/btnDecrement"/>
+        android:textSize="24sp" />
 
     <TextView
+        android:id="@+id/tvValue"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
+        android:layout_below="@id/tvName"
+        android:layout_marginTop="15dp"
         android:layout_toRightOf="@id/btnDecrement"
-        android:layout_marginLeft="16dp"
-        android:layout_centerVertical="true"
-        android:text="ERROR"
-        android:id="@+id/tvValue"/>
+        android:text="ERROR" />
 
     <Button
+        android:id="@+id/btnIncrement"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
+        android:layout_below="@id/tvName"
         android:layout_toRightOf="@id/tvValue"
-        android:layout_marginLeft="16dp"
-        android:text="+"
-        android:id="@+id/btnIncrement" />
+        android:text="+" />
 
 </RelativeLayout>
