I have no idea...
Kind of have main display, but also don't. Kind of want to get Floating Action Buttons to replace buttons for seperate screens.

--- a/app/src/main/res/layout/activity_scout.xml
+++ b/app/src/main/res/layout/activity_scout.xml
@@ -8,6 +8,7 @@
     tools:context="org.roboriotteam3418.frc3418scouting.ScoutActivity">
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/ablAppBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
@@ -17,9 +18,38 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
+
+    <LinearLayout
+        android:id="@+id/llBtmBtns"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Button1" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Button2" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Button3" />
+    </LinearLayout>
 
     <include layout="@layout/content_scout" />
 
