--- a/app/src/main/res/layout/content_scout.xml
+++ b/app/src/main/res/layout/content_scout.xml
@@ -1,64 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_scout"
+    android:id="@+id/fragment"
+    android:name="layout.scout.ScoutFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="org.roboriotteam3418.frc3418scouting.ScoutActivity"
-    tools:showIn="@layout/activity_scout">
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/tilEtMatch"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
-
-        <EditText
-            android:id="@+id/etMatch"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Match Number"
-            android:inputType="number"
-            android:maxLines="1" />
-
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/tilEtTeam"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/tilEtMatch">
-
-        <EditText
-            android:id="@+id/etTeam"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Team Number"
-            android:inputType="number"
-            android:maxLines="1"
-            android:selectAllOnFocus="true" />
-
-    </android.support.design.widget.TextInputLayout>
-
-    <TextView
-        android:id="@+id/tvAlliance"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tilEtMatch"
-        android:text="Alliance" />
-
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvAlliance"
-        android:entries="@array/alliance_array" />
-
-
-</RelativeLayout>
+    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
