--- a/app/src/main/res/layout/fragment_teleop.xml
+++ b/app/src/main/res/layout/fragment_teleop.xml
@@ -1,13 +1,8 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="layout.scout.TeleopFragment">
+    tools:context="layout.scout.TeleopFragment"
+    android:id="@+id/teleContainer">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello Teleop Fragment" />
-
-</FrameLayout>
+</RelativeLayout>
