--- a/app/src/main/res/layout/integer_compound.xml
+++ b/app/src/main/res/layout/integer_compound.xml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="@dimen/compound_width"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tvName"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:textAlignment="center"
+        android:maxLines="1"
+        android:ellipsize="marquee"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:scrollHorizontally="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:freezesText="true"
         android:text="ERROR"
         android:textSize="24sp" />
 
@@ -25,6 +33,7 @@
         android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvName"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
         android:layout_toRightOf="@id/btnDecrement"
         android:text="ERROR" />
