Node reload now only happens on initial run or upon request.
This allows the SQL table to not having to be re-built on each run.

--- a/app/src/main/res/menu/menu_scout.xml
+++ b/app/src/main/res/menu/menu_scout.xml
@@ -9,6 +9,12 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/action_reload"
+        android:orderInCategory="2"
+        android:title="Reload Parameters"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/actionSave"
         android:icon="@android:drawable/ic_menu_save"
         android:title="@string/actionSave"
