Changed FAB icons to more reasonable icons.
Added + & - buttons by Match.

Added Home to FAB - Loads Scout Fragment.

Started SQLite implementation.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="standard_55">55dp</dimen>
     <dimen name="standard_100">100dp</dimen>
     <dimen name="standard_145">145dp</dimen>
+    <dimen name="standard_190">190dp</dimen>
 
     <dimen name="compound_width">160dp</dimen>
 </resources>
