--- a/app/src/main/res/layout/activity_scout.xml
+++ b/app/src/main/res/layout/activity_scout.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="layout.scout.Scout">
+    tools:context=".ScoutActivity">
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/ablToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        android:id="@+id/ablToolbar">
+        android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -23,25 +23,25 @@
     </android.support.design.widget.AppBarLayout>
 
     <RelativeLayout
-        android:orientation="vertical"
+        android:id="@+id/layout"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_below="@id/ablToolbar"
-        android:id="@+id/layout">
+        android:orientation="vertical">
     </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/fabLayoutAuto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="@dimen/standard_23"
-        android:padding="@dimen/standard_12"
-        android:clipToPadding="false"
-        android:gravity="center_vertical"
-        android:layout_marginBottom="@dimen/standard_23"
-        android:layout_gravity="bottom|end"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="@dimen/standard_23"
+        android:layout_marginRight="@dimen/standard_23"
+        android:clipToPadding="false"
+        android:gravity="center_vertical"
+        android:padding="@dimen/standard_12"
         android:visibility="gone">
 
         <TextView
@@ -54,22 +54,50 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            app:srcCompat="@android:drawable/ic_dialog_email"
-            app:fabSize="mini"/>
+            app:fabSize="mini"
+            app:srcCompat="@drawable/ic_auto" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/fabLayoutHome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="@dimen/standard_23"
+        android:layout_marginRight="@dimen/standard_23"
+        android:clipToPadding="false"
+        android:gravity="center_vertical"
+        android:padding="@dimen/standard_12"
+        android:visibility="gone">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Home" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fabHome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            app:fabSize="mini"
+            app:srcCompat="@drawable/ic_home" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/fabLayoutTele"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/standard_12"
-        android:clipToPadding="false"
-        android:layout_marginRight="@dimen/standard_23"
-        android:gravity="center_vertical"
-        android:layout_marginBottom="@dimen/standard_23"
-        android:layout_gravity="bottom|end"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="@dimen/standard_23"
+        android:layout_marginRight="@dimen/standard_23"
+        android:clipToPadding="false"
+        android:gravity="center_vertical"
+        android:padding="@dimen/standard_12"
         android:visibility="gone">
 
         <TextView
@@ -82,8 +110,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            app:srcCompat="@drawable/ic_camera"
-            app:fabSize="mini"/>
+            app:fabSize="mini"
+            app:srcCompat="@drawable/ic_controller" />
     </LinearLayout>
 
 
@@ -91,14 +119,14 @@
         android:id="@+id/fabLayoutNotes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/standard_12"
-        android:clipToPadding="false"
-        android:layout_marginRight="@dimen/standard_23"
-        android:gravity="center_vertical"
-        android:layout_marginBottom="@dimen/standard_23"
-        android:layout_gravity="bottom|end"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="@dimen/standard_23"
+        android:layout_marginRight="@dimen/standard_23"
+        android:clipToPadding="false"
+        android:gravity="center_vertical"
+        android:padding="@dimen/standard_12"
         android:visibility="gone">
 
         <TextView
@@ -111,9 +139,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            app:srcCompat="@drawable/ic_mic"
             android:tint="@android:color/white"
-            app:fabSize="mini"/>
+            app:fabSize="mini"
+            app:srcCompat="@drawable/ic_note" />
     </LinearLayout>
 
 
@@ -121,14 +149,14 @@
         android:id="@+id/fabLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="@dimen/fab_margin"
-        android:gravity="center_vertical"
-        android:clipToPadding="false"
-        android:padding="@dimen/standard_12"
-        android:layout_marginBottom="@dimen/fab_margin"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_gravity="bottom|end">
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="@dimen/fab_margin"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:clipToPadding="false"
+        android:gravity="center_vertical"
+        android:padding="@dimen/standard_12">
 
 
         <android.support.design.widget.FloatingActionButton
@@ -137,8 +165,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:gravity="center_vertical"
-            app:srcCompat="@drawable/ic_toys"
-            app:fabSize="normal"/>
+            app:fabSize="normal"
+            app:srcCompat="@drawable/ic_toys" />
     </LinearLayout>
 
 </RelativeLayout>
