--- a/app/src/main/res/layout/fragment_scout.xml
+++ b/app/src/main/res/layout/fragment_scout.xml
@@ -10,30 +10,55 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="org.roboriotteam3418.frc3418scouting.ScoutActivity"
-    tools:showIn="@layout/activity_scout">
+    tools:context="org.roboriotteam3418.frc3418scouting.ScoutActivity">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/tilEtMatch"
+
+    <LinearLayout
+        android:id="@+id/matchLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true">
 
-        <EditText
-            android:id="@+id/etMatch"
-            android:layout_width="match_parent"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilEtMatch"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Match Number"
-            android:inputType="number"
-            android:maxLines="1" />
+            android:layout_weight=".7">
 
-    </android.support.design.widget.TextInputLayout>
+            <EditText
+                android:id="@+id/etMatch"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Match Number"
+                android:inputType="number"
+                android:maxLines="1" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <Button
+            android:id="@+id/btnMatchDecrement"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/tilEtMatch"
+            android:text="-"
+            android:textSize="24sp" />
+
+        <Button
+            android:id="@+id/btnMatchIncrement"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/btnMatchDecrement"
+            android:text="+"
+            android:textSize="24sp" />
+
+    </LinearLayout>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/tilEtTeam"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@id/tilEtMatch">
+        android:layout_above="@id/matchLayout"
+        android:layout_alignParentLeft="true">
 
         <EditText
             android:id="@+id/etTeam"
@@ -42,19 +67,20 @@
             android:hint="Team Number"
             android:inputType="number"
             android:maxLines="1"
-            android:selectAllOnFocus="true" />
+            android:selectAllOnFocus="true"></EditText>
 
     </android.support.design.widget.TextInputLayout>
+
 
     <TextView
         android:id="@+id/tvAlliance"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tilEtMatch"
+        android:layout_below="@id/matchLayout"
         android:text="Alliance" />
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/spAlliance"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvAlliance"
