--- a/app/src/main/res/layout/integer_compound.xml
+++ b/app/src/main/res/layout/integer_compound.xml
@@ -36,7 +36,9 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
         android:layout_toRightOf="@id/btnDecrement"
-        android:text="ERROR" />
+        android:text="ERROR"
+        android:textSize="20sp"
+        android:gravity="center_vertical|center_horizontal" />
 
     <Button
         android:id="@+id/btnIncrement"
