--- a/app/src/main/res/menu/menu_scout.xml
+++ b/app/src/main/res/menu/menu_scout.xml
@@ -2,16 +2,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ScoutActivity">
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
 
     <item
         android:id="@+id/action_reload"
         android:orderInCategory="2"
         android:title="Reload Schedule"
+        android:icon="@android:drawable/ic_popup_sync"
         app:showAsAction="never" />
 
     <item
