--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2017. RoboRiot and/or its affiliates. All rights reserved.
   ~ DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
@@ -18,22 +19,9 @@
   ~ along with RoboRiot Scouting.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
-
-    <dimen name="standard_12">12dp</dimen>
-    <dimen name="standard_23">23dp</dimen>
-    <dimen name="standard_55">55dp</dimen>
-    <dimen name="standard_100">100dp</dimen>
-    <dimen name="standard_145">145dp</dimen>
-    <dimen name="standard_190">190dp</dimen>
-
-    <dimen name="compound_width">320dp</dimen>
-    <dimen name="compound_height">160dp</dimen>
-
-    <dimen name="text_titleSize">45sp</dimen>
-    <dimen name="text_valueSize">37.5sp</dimen>
-</resources>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <stroke
+        android:width="1dip"
+        android:color="@android:color/black" />
+</shape>
