--- a/app/src/main/res/layout/fragment_teleop.xml
+++ b/app/src/main/res/layout/fragment_teleop.xml
@@ -23,7 +23,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Layout.TeleopFragment"
-    android:id="@+id/teleContainer"
-    android:background="@drawable/bg_background">
+    android:id="@+id/teleContainer">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitCenter"
+        android:src="@drawable/bg_background"
+        android:alpha=".5" />
 </RelativeLayout>
