--- a/app/src/main/res/layout/fragment_autonomous.xml
+++ b/app/src/main/res/layout/fragment_autonomous.xml
@@ -23,7 +23,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Layout.AutonomousFragment"
-    android:id="@+id/autoContainer"
-    android:background="@drawable/bg_background">
+    android:id="@+id/autoContainer">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitCenter"
+        android:src="@drawable/bg_background"
+        android:alpha=".5" />
 
 </RelativeLayout>
