--- a/app/src/main/res/layout/fragment_scout.xml
+++ b/app/src/main/res/layout/fragment_scout.xml
@@ -29,9 +29,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="org.roboriotteam3418.frc3418scouting.Application.ScoutActivity"
-    android:background="@drawable/bg_background">
+    tools:context="org.roboriotteam3418.frc3418scouting.Application.ScoutActivity">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitCenter"
+        android:src="@drawable/bg_background"
+        android:alpha=".5" />
 
     <LinearLayout
         android:id="@+id/matchLayout"
@@ -51,7 +56,8 @@
                 android:layout_height="wrap_content"
                 android:hint="Match Number"
                 android:inputType="number"
-                android:maxLines="1" />
+                android:maxLines="1"
+                android:enabled="false" />
 
         </android.support.design.widget.TextInputLayout>
 
