--- a/app/src/main/res/layout/actionbar_view.xml
+++ b/app/src/main/res/layout/actionbar_view.xml
@@ -23,52 +23,61 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/txABTeam"
-        android:textSize="@dimen/text_ActionBarSize"
-        android:textColor="@color/colorABText"
-        android:id="@+id/textView" />
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/text_ActionBarSize"
-        android:textColor="@color/colorABText"
-        android:id="@+id/tvABTeam"
-        android:text="8888" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    <Space
-        android:layout_width="50dp"
-        android:layout_height="wrap_content" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/txABTeam"
+                android:textSize="@dimen/text_ActionBarSize"
+                android:textColor="@color/colorABText"
+                android:id="@+id/textView" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/text_ActionBarSize"
-        android:textColor="@color/colorABText"
-        android:text="@string/txABMatch" />
+            <Space
+                android:layout_width="15dp"
+                android:layout_height="wrap_content" />
 
-    <TextView
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/text_ActionBarSize"
-        android:textColor="@color/colorABText"
-        android:id="@+id/tvABMatch"
-        android:text="555" />
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/text_ActionBarSize"
+                android:textColor="@color/colorABText"
+                android:id="@+id/tvABTeam"
+                android:text="8888" />
+        </LinearLayout>
 
-    <Space
-        android:layout_width="50dp"
-        android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/text_ActionBarSize"
-        android:textColor="@color/colorABText"
-        android:text="@string/txABNextPhase"
-        android:background="@android:color/transparent"
-        android:id="@+id/btnABNext" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/text_ActionBarSize"
+                android:textColor="@color/colorABText"
+                android:text="@string/txABMatch" />
+
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/text_ActionBarSize"
+                android:textColor="@color/colorABText"
+                android:id="@+id/tvABMatch"
+                android:text="555" />
+        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
