--- a/app/src/main/res/layout/fragment_scout.xml
+++ b/app/src/main/res/layout/fragment_scout.xml
@@ -19,16 +19,10 @@
   -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_scout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="org.roboriotteam3418.frc3418scouting.Application.ScoutActivity">
 
     <ImageView
@@ -50,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_weight=".7">
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:id="@+id/etMatch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -86,14 +80,14 @@
         android:layout_above="@id/matchLayout"
         android:layout_alignParentLeft="true">
 
-        <EditText
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/etTeam"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Team Number"
             android:inputType="number"
             android:maxLines="1"
-            android:selectAllOnFocus="true"></EditText>
+            android:selectAllOnFocus="true" />
 
     </android.support.design.widget.TextInputLayout>
 
