--- a/app/src/main/res/layout/integer_compound.xml
+++ b/app/src/main/res/layout/integer_compound.xml
@@ -40,33 +40,70 @@
         android:text="ERROR"
         android:textSize="@dimen/text_titleSize" />
 
-    <TextView
-        android:id="@+id/tvValue"
-        android:layout_width="60dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tvName"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
-        android:text="ERROR"
-        android:textSize="@dimen/text_valueSize"
-        android:gravity="center_vertical|center_horizontal" />
+        android:layout_below="@id/tvName">
 
-    <Button
-        android:id="@+id/btnDecrement"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvName"
-        android:layout_toLeftOf="@id/tvValue"
-        android:text="-"
-        android:textSize="30sp" />
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".1"
+            android:text="-5"
+            android:textSize="30sp"
+            android:id="@+id/btnDecTen" />
 
-    <Button
-        android:id="@+id/btnIncrement"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvName"
-        android:layout_toRightOf="@id/tvValue"
-        android:text="+"
-        android:textSize="30sp" />
+        <!--Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".1"
+            android:text="-5"
+            android:textSize="30sp"
+            android:id="@+id/btnDecFive"/-->
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".1"
+            android:text="-1"
+            android:textSize="30sp"
+            android:id="@+id/btnDec" />
+
+        <TextView
+            android:id="@+id/tvValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvName"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="15dp"
+            android:text="ERROR"
+            android:textSize="@dimen/text_valueSize"
+            android:gravity="center_vertical|center_horizontal" />
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".1"
+            android:text="+1"
+            android:textSize="30sp"
+            android:id="@+id/btnInc" />
+
+        <!--Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".1"
+            android:text="+5"
+            android:textSize="30sp"
+            android:id="@+id/btnIncFive"/-->
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".1"
+            android:text="+5"
+            android:textSize="30sp"
+            android:id="@+id/btnIncTen" />
+
+    </LinearLayout>
 
 </RelativeLayout>
